# ws-example

./: Cargo.toml
src/: main.rs
